Add a unified prefix to the backend interface to facilitate Nginx's configuration of reverse proxy